syntax = "proto3";
package mafia;
option go_package = "github.com/Lirikl/mafia/pkg/proto/mafia";
service Mafia {
    rpc Connect(ConnectionRequest) returns (stream ConnectionUpdate)  {}
    rpc GameSession(stream GameCommand) returns (stream GameEvent) {} 
}

enum ConnectionStatus {
    Connect = 0;
    Disconnect = 1;
    None = 2;
    Start = 3;
    Bad = 4;
}

message ConnectionRequest {
    string name = 1;
    ConnectionStatus connect = 2;
}



message ConnectionUpdate {
    string name = 1;
    ConnectionStatus connect = 2;
    repeated string users = 3;
    int64 SessionID = 4;
    string Role = 5;
}

message GameCommand {
    string type = 1;
    string vote = 2;
    int64 SessionID = 3;
    string name = 4;
}

message GameEvent {
    string victim = 2;
    string suspect = 3;
    bool CheckResult = 4; 
    int64 Winner = 5;
}